s-a creat pagina de favorit si paginare pe index

--- a/.htaccess
+++ b/.htaccess
@@ -15,5 +15,6 @@ RewriteRule ^adauga$ adauga.php
 RewriteRule ^edit$ edit.php
 RewriteRule ^delete$ delete.php
 RewriteRule ^imagine/(.*)$ imagine.php?id=$1
+RewriteRule ^favorit$ favorit.php
 
 </IfModule>
